--- a/styles/hero.css
+++ b/styles/hero.css
@@ -49,6 +49,7 @@
     align-items: center;
     justify-content: center;
     vertical-align: top;
+    border: none;
     position: relative;
 }
 
